# TemplateSaneProgram

./: .gitignore  .gitmodules  AdventOfCode.cpp  AndroidBuild.py  AssetManager.cpp  AssetManager.h  AssetManager.hpp  CMakeLists.txt  Camera.hpp  Makefile  Platform.cpp  Platform.hpp  PlatformAndroid.cpp  PlatformWindows.cpp  Project.10x  README.md  Renderer.cpp  Renderer.h  Renderer.hpp  SaneProgram.cpp  SaneProgram.rc  SaneProgram.res  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  build.bat
Android/: README.md  settings.gradle  settings.gradle.kts
Android/app/: build.gradle  build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/Meshes/Paladin/: Paladin.abm
Android/app/src/main/assets/Meshes/SponzaGLTF/: scene.abm
Android/app/src/main/assets/Shaders/: 3DFirstFrag.glsl  3DFirstVert.glsl  3DVert.glsl  DeferredPBR.glsl  FrameBufferCopy.glsl  GBuffer.glsl  MainFrameBufferCopy.glsl  PBRFrag.glsl  PostProcessing.glsl  SSAO.glsl  UpscaleRed.glsl
Android/app/src/main/cpp/: CMakeLists.txt  PlatformAndroid.cpp
Android/app/src/main/java/com/anilgames/game/: MainActivity.java
Android/app/src/main/java/com/anilgames/test/: MainActivity.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Assets/Fonts/: JetBrainsMono-Regular.bft
Assets/Meshes/Brute/: Brute.gltf
Assets/Meshes/Duck/: Duck.abm
Assets/Meshes/GroveStreet/: GroveStreet.abm  GroveStreet.astc  GroveStreet.dxt  GroveStreet.gltf
Assets/Meshes/Paladin/: Paladin.astc  Paladin.dxt  Paladin.gltf
Assets/Meshes/Police Car/: scene.dxt  scene.gltf
Assets/Scripts/: AndroidBuild.py  GenMetRoughness.cpp  HalfResizer.cpp
Assets/Shaders/: 3DVert.glsl  ColorPickFrag.glsl  DeferredPBR.glsl  EmptyVert.glsl  GBuffer.glsl  GodRays.glsl  GrassFrag.glsl  GrassGeom.glsl  HBAO.glsl  HBAOBlur.glsl  HBAODeinterleave.glsl  MLAA.glsl  MovePixels.glsl  PerlinNoise.glsl  QuadBatch.glsl  QuadBatchGeom.glsl  QuadFrag.glsl  ReconstructNormal.glsl  ShadowRT.glsl  ShadowRTCompute.glsl  SingleQuadVert.glsl  SkyboxFrag.glsl  SkyboxVert.glsl  TerrainFrag.glsl  TerrainGenNormals.glsl  TerrainGeom.glsl  TextGeom.glsl  TextVert.glsl  TreeFrag.glsl  TreeVert.glsl
Fonts/: JetBrainsMono-Regular.bft  Quivira.bft
Meshes/: Duck.gltf  GroveStreet.gltf  Sphere.abm  Sphere.gltf  wooden_windmill.fbx
Meshes/Bistro/: Download_Here.txt
Meshes/Brute/: Brute.abm  Brute.gltf
Meshes/Duck/: Duck.astc  Duck.dxt  Duck.gltf
Meshes/GroveStreet/: GroveStreet.abm  GroveStreet.astc  GroveStreet.dxt  GroveStreet.gltf
Meshes/Paladin/: Paladin.abm  Paladin.dxt  Paladin.gltf
Meshes/Police Car/: scene.abm  scene.dxt  scene.gltf
Meshes/SponzaGLTF/: scene.abm  scene.gltf
Meshes/SponzaGLTF/textures/: GenMetRoughness.cpp
Scripts/: AndroidBuild.py  GenMetRoughness.cpp  HalfResizer.cpp
Shaders/: 3DFirstFrag.glsl  3DFirstVert.glsl  3DVert.glsl  AnimCompute.glsl  ColorPickFrag.glsl  ColorPickVert.glsl  DeferredPBR.glsl  FrameBufferCopy.glsl  GBuffer.glsl  GodRays.glsl  HBAO.glsl  HBAOBlur.glsl  HBAODeinterleave.glsl  HBAOReinterleave.glsl  LinearizeDepth.glsl  MLAA.glsl  MLAA_Edge.glsl  MainFrameBufferCopy.glsl  OutlineFrag.glsl  OutlineVert.glsl  PBRFrag.glsl  PostProcessing.glsl  QuadBatch.glsl  QuadFrag.glsl  ReconstructNormal.glsl  SSAO.glsl  ShadowVert.glsl  SingleQuadVert.glsl  SkyboxFrag.glsl  SkyboxVert.glsl  TextFrag.glsl  TextVert.glsl  UITriangleFrag.glsl  UITriangleVert.glsl  UpscaleRed.glsl
src/: Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  BVH.cpp  Camera.hpp  CharacterController.cpp  CharacterController.hpp  Editor.cpp  HBAO.cpp  Menu.cpp  Platform.hpp  PlatformAndroid.cpp  PlatformWindows.cpp  Renderer.cpp  Renderer.hpp  SaneProgram.cpp  Scene.cpp  Scene.hpp  SceneRenderer.cpp  SceneRenderer.hpp  TLAS.cpp  Terrain.cpp  TextRenderer.cpp  Texture.cpp  UI.cpp  VulkanBackend.cpp
src/include/: Animation.hpp  AssetManager.hpp  BVH.hpp  Camera.hpp  CharacterController.hpp  Editor.hpp  HBAO.hpp  Menu.hpp  Platform.hpp  Renderer.hpp  Scene.hpp  SceneRenderer.hpp  TLAS.hpp  TextRenderer.hpp  UI.hpp
